# snchain

./: Cargo.toml  LICENSE  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/util/: block.rs  chain.rs  func.rs  mod.rs  tx.rs  utxo.rs
data/: 1.block
src/: main.rs
