[package]
name = "core"
version = "0.1.0"
authors = ["holdnosoul@gmail.com <holdnosoul@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sha256 = "1.0.2"
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
lazy_static = "1.4.0"
rand = "0.8.3"